SERVER-39903 notablescan parameter should be ignored for internally used namespaces