src/mongo/db/query/get_executor.cpp
@@ -231,10 +231,10 @@ void fillOutPlannerParams(OperationContext* opCtx,
     // overrides this behavior by not outputting a collscan even if there are no indexed
     // solutions.
     if (storageGlobalParams.noTableScan.load()) {
-        const string& ns = canonicalQuery->ns();
+        const auto& nss = canonicalQuery->nss();
         // There are certain cases where we ignore this restriction:
-        bool ignore = canonicalQuery->getQueryObj().isEmpty() ||
-            (string::npos != ns.find(".system.")) || (0 == ns.find("local."));
+        bool ignore =
+            canonicalQuery->getQueryObj().isEmpty() || nss.isSystem() || nss.isOnInternalDb();
         if (!ignore) {
             plannerParams->options |= QueryPlannerParams::NO_TABLE_SCAN;
         }
